# genomstromning

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
genomstromning/: io.py  main.py  merit.py  production.py  produktion.py
